manifest/objects/ALTF__Account_Plan_Roll_Up_Value__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>AM Plan Metric Scores</relationshipLabel>
        <relationshipName>AM_Plan_Metric_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Annual_Revenue_Target__c</fullName>
        <label>Annual Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Current_Opportunities_Score_Amount__c</fullName>
        <label>Current Opportunities Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Current_Opportunities_Score__c</fullName>
        <label>Current Opportunities Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Current_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Current Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Potential_Opportunities_Score_Amount__c</fullName>
        <label>Potential Opportunities Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Potential_Opportunities_Score__c</fullName>
        <label>Potential Opportunities Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Potential_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Potential Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Previous_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Lookup is populated with the ID of the AM Plan Metric Score record from the previous month (if any).</description>
        <label>Previous Score</label>
        <referenceTo>ALTF__Account_Plan_Roll_Up_Value__c</referenceTo>
        <relationshipLabel>Previous Plan Metric Scores</relationshipLabel>
        <relationshipName>AM_Previous_Plan_Metric_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Previous_score_2_months__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Lookup is populated with the ID of the AM Plan Metric Score record from two months ago (if any).</description>
        <label>Previous score - 2 months</label>
        <referenceTo>ALTF__Account_Plan_Roll_Up_Value__c</referenceTo>
        <relationshipLabel>AM Plan Metric Scores (Previous score - 2 months)</relationshipLabel>
        <relationshipName>AM_Plan_Metric_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Target_Revenue_Score_Amount__c</fullName>
        <label>Target Revenue Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Target_Revenue_Score__c</fullName>
        <label>Target Revenue Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Current_Opps_Change_Start_Last_Mnt__c</fullName>
        <description>The change in the total value of Current opportunities in the last two months.</description>
        <formula>ALTF__Current_Opportunities_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Current_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Opps Change Start Last Mnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Current_Opps_Change_Strt_Last_2Mnt__c</fullName>
        <description>The change in the total value of Current opportunities in the last three months. (That is, the period spanning this month back to the start of the previous two months.)</description>
        <formula>ALTF__Current_Opportunities_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Previous_Score__r.ALTF__Current_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Opps Change Strt Last 2Mnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Current_Opps_Change__c</fullName>
        <description>The change in the total value of Current opportunities this month.</description>
        <formula>ALTF__Current_Opportunities_Score_Amount__c - ALTF__Previous_Score__r.ALTF__Current_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Potential_Opps_Change__c</fullName>
        <description>The change in the total value of Potential opportunities this month.</description>
        <formula>ALTF__Potential_Opportunities_Score_Amount__c - ALTF__Previous_Score__r.ALTF__Potential_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Potential_Opps_Chng_Strt_Lst_2Mnth__c</fullName>
        <description>The change in the total value of Potential opportunities in the last three months. (That is, the period spanning this month back to the start of the previous two months.)</description>
        <formula>ALTF__Potential_Opportunities_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Previous_Score__r.ALTF__Potential_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Opps Chng Strt Lst 2Mnth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Potential_Opps_Chng_Strt_Lst_Mnth__c</fullName>
        <description>The change in the total value of Potential opportunities in the last two months.</description>
        <formula>ALTF__Potential_Opportunities_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Potential_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Opps Chng Strt Lst Mnth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Won_Opps_Change_Start_Last_2_Mont__c</fullName>
        <description>The change in the total value of Won opportunities in the last three months. (That is, the period spanning this month back to the start of the previous two months.</description>
        <formula>ALTF__Target_Revenue_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Previous_Score__r.ALTF__Target_Revenue_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Won Opps Change Start Last 2 Mont</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Won_Opps_Change_Start_Last_Month__c</fullName>
        <description>The change in the total value of Won opportunities in the last two months.</description>
        <formula>ALTF__Target_Revenue_Score_Amount__c - ALTF__Previous_score_2_months__r.ALTF__Target_Revenue_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Won Opps Change Start Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Total_Won_Opps_Change__c</fullName>
        <description>The change in the total value of Won opportunities this month.</description>
        <formula>ALTF__Target_Revenue_Score_Amount__c - ALTF__Previous_Score__r.ALTF__Target_Revenue_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Won Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Won_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Won Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <label>Altify AM Plan Roll Up Value</label>
    <nameField>
        <label>AM Plan Metric Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plan Roll Up Valu</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>